# navi

./: .ghci  .gitignore  .hlint.yaml  LICENSE  Makefile  README.md  cabal.ghc9102.project  cabal.ghc9102.project.freeze  cabal.project  cabal.project.freeze  flake.nix  hie.yaml  navi.cabal  shell.nix  stack.nix  stack.yaml
.github/scripts/: release_linux.sh  release_osx.sh  verify_env.sh
.github/workflows/: cabal.yaml  cabal_9-2.yaml  cabal_ci.yaml  ci.yaml  ghc_8-10-7.yaml  ghc_8-10.yaml  ghc_9-0-2.yaml  ghc_9-0.yaml  ghc_9-2-1.yaml  ghc_9-2.yaml  haddock_ci.yaml  nix.yaml  nix_ci.yaml  stack.yaml  stack_ci.yaml  stack_nightly.yaml  style.yaml  style_ci.yaml
app/: Main.hs
ci_scripts/: cabal-fmt.sh  check_all.sh  haddock.sh  hlint.sh  nixpkgs-fmt.sh  ormolu.sh
docker/alpine_amd64/: Dockerfile
docker/alpine_arm64v8/: Dockerfile
docs/: CHANGELOG.md  Navi-Args-TH.html  Navi-Args.html  Navi-Config-Phase.html  Navi-Config-Toml.html  Navi-Config-Types.html  Navi-Config.html  Navi-Data-CommandResult.html  Navi-Data-CommandResultParser.html  Navi-Data-NaviLog.html  Navi-Data-NaviNote.html  Navi-Data-NaviQueue.html  Navi-Data-PollInterval.html  Navi-Data-Result.html  Navi-Effects-MonadLogger.html  Navi-Effects-MonadMutRef.html  Navi-Effects-MonadNotify.html  Navi-Effects-MonadQueue.html  Navi-Effects-MonadShell.html  Navi-Effects-MonadSystemInfo.html  Navi-Effects.html  Navi-Env-AppleScript.html  Navi-Env-Core.html  Navi-Env-DBus.html  Navi-Env-NotifySend.html  Navi-Event-Toml.html  Navi-Event-Types-EventError.html  Navi-Event-Types.html  Navi-Event.html  Navi-NaviT.html  Navi-Runner.html  Navi-Services-Battery-Common.html  Navi-Services-Battery-Percentage-Toml.html  Navi-Services-Battery-Percentage.html  Navi-Services-Battery-Status-Toml.html  Navi-Services-Battery-Status.html  Navi-Services-Custom-Multiple-Toml.html  Navi-Services-Custom-Multiple.html  Navi-Services-Custom-Single-Toml.html  Navi-Services-Custom-Single.html  (+51 more)
docs/src/: Navi.Args.TH.html  Navi.Args.html  Navi.Config.Phase.html  Navi.Config.Toml.html  Navi.Config.Types.html  Navi.Config.html  Navi.Data.CommandResult.html  Navi.Data.CommandResultParser.html  Navi.Data.NaviLog.html  Navi.Data.NaviNote.html  Navi.Data.NaviQueue.html  Navi.Data.PollInterval.html  Navi.Data.Result.html  Navi.Effects.MonadLogger.html  Navi.Effects.MonadMutRef.html  Navi.Effects.MonadNotify.html  Navi.Effects.MonadQueue.html  Navi.Effects.MonadShell.html  Navi.Effects.MonadSystemInfo.html  Navi.Effects.html  Navi.Env.AppleScript.html  Navi.Env.Core.html  Navi.Env.DBus.html  Navi.Env.NotifySend.html  Navi.Event.Toml.html  Navi.Event.Types.EventError.html  Navi.Event.Types.html  Navi.Event.html  Navi.NaviT.html  Navi.Prelude.html  Navi.Runner.html  Navi.Services.Battery.Common.html  Navi.Services.Battery.Percentage.Toml.html  Navi.Services.Battery.Percentage.html  Navi.Services.Battery.Status.Toml.html  Navi.Services.Battery.Status.html  Navi.Services.Custom.Multiple.Toml.html  Navi.Services.Custom.Multiple.html  Navi.Services.Custom.Single.Toml.html  Navi.Services.Custom.Single.html  (+8 more)
examples/: config.toml  default.toml  multiple.toml  simple.toml
nix/: cabal.nix  cabal_9-2.nix  cabal_base.nix  ghc_8-10-7.nix  ghc_9-0-2.nix  ghc_9-2-1.nix  ghc_9-2.nix  ghc_base.nix  stack.nix  stack_base.nix  stack_nightly.nix
scripts/: cabal-fmt_inplace.sh  gen_haddock.sh  nixpkgs-fmt_inplace.sh  ormolu_inplace.sh
src/: Navi.hs
src/Navi/: Args.hs  Config.hs  Effects.hs  Env.hs  Event.hs  MonadNavi.hs  NaviT.hs  Prelude.hs  Runner.hs  Utils.hs
src/Navi/Args/: TH.hs
src/Navi/Class/: Service.hs
src/Navi/Config/: Phase.hs  Toml.hs  Types.hs
src/Navi/Data/: BoundedN.hs  CommandResult.hs  CommandResultParser.hs  Config.hs  Event.hs  NaviLog.hs  NaviNote.hs  NaviQueue.hs  NonNegative.hs  PollInterval.hs  Result.hs  ServiceException.hs  Sorted.hs
src/Navi/Effectful/: Logging.hs  Notify.hs  Pythia.hs
src/Navi/Effects/: MonadLogger.hs  MonadLoggerContext.hs  MonadMutRef.hs  MonadNotify.hs  MonadQueue.hs  MonadShell.hs  MonadSystemInfo.hs  MonadSystemTime.hs
src/Navi/Env/: AppleScript.hs  Core.hs  DBus.hs  NotifySend.hs
src/Navi/Event/: Toml.hs  Types.hs
src/Navi/Event/Types/: EventError.hs
src/Navi/Note/: Toml.hs
src/Navi/Services/: Battery.hs  Custom.hs  Types.hs
src/Navi/Services/Battery/: ChargeStatus.hs  Common.hs  Event.hs  Level.hs  Parsing.hs  Percentage.hs  State.hs  Status.hs  Toml.hs  Types.hs
src/Navi/Services/Battery/ChargeStatus/: Toml.hs
src/Navi/Services/Battery/Level/: Event.hs  Toml.hs
src/Navi/Services/Battery/Percentage/: Toml.hs
src/Navi/Services/Battery/State/: Toml.hs
src/Navi/Services/Battery/Status/: Event.hs  Toml.hs
src/Navi/Services/Custom/: Multiple.hs  Single.hs  Switch.hs  Toml.hs  Types.hs
src/Navi/Services/Custom/Multiple/: Event.hs  Toml.hs
src/Navi/Services/Custom/Single/: Event.hs  Toml.hs
src/Navi/Services/Custom/Switch/: Toml.hs
src/Navi/Services/Network/: Connectivity.hs  NetInterfaces.hs  Types.hs
src/Navi/Services/Network/Connectivity/: Toml.hs
src/Navi/Services/Network/NetInterfaces/: Toml.hs
test/e2e/: Main.hs  config_linux.toml  config_osx.toml
test/integration/: Main.hs  exceptions.toml  exceptions_linux.toml  exceptions_osx.toml
test/integration/Integration/: Exceptions.hs  MockApp.hs  Prelude.hs
test/unit/: Main.hs  multiple.toml  simple.toml
test/unit/Unit/: Prelude.hs  Utils.hs
test/unit/Unit/Navi/: Config.hs
test/unit/Unit/Navi/Config/: Toml.hs
test/unit/Unit/Navi/Services/Battery/Percentage/: Toml.hs
test/unit/Unit/Navi/Services/Battery/Status/: Toml.hs
test/unit/Unit/Navi/Services/Custom/: Toml.hs
test/unit/Unit/Navi/Services/Custom/Multiple/: Toml.hs
test/unit/Unit/Navi/Services/Custom/Single/: Toml.hs
test/unit/Unit/Navi/Services/Network/NetInterfaces/: Toml.hs
tools/: format.sh  haddock.sh  lint-refactor.sh  lint.sh
