cabal-version:      2.4
name:               navi
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.4.6 || ==9.6.2
copyright:          2021-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/navi/
bug-reports:        https://github.com/tbidne/navi/issues
synopsis:           A utility program for sending system notifications.
description:
  Please see the README at https://github.com/tbidne/navi/#readme

category:           System, Notifications
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/navi

common common-exts
  default-extensions:
    NoFieldSelectors
    NoImplicitPrelude
    NoStarIsType
    ApplicativeDo
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    TypeFamilies

library
  import:           common-exts
  other-modules:    Paths_navi
  autogen-modules:  Paths_navi
  exposed-modules:
    Navi
    Navi.Args
    Navi.Config
    Navi.Config.Toml
    Navi.Config.Types
    Navi.Data.NaviLog
    Navi.Data.NaviNote
    Navi.Data.PollInterval
    Navi.Effectful.Logging
    Navi.Effectful.Notify
    Navi.Effectful.Pythia
    Navi.Env.Core
    Navi.Env.DBus
    Navi.Env.NotifySend
    Navi.Event
    Navi.Event.Toml
    Navi.Event.Types
    Navi.Prelude
    Navi.Services.Battery.Common
    Navi.Services.Battery.Percentage
    Navi.Services.Battery.Percentage.Toml
    Navi.Services.Battery.Status
    Navi.Services.Battery.Status.Toml
    Navi.Services.Custom.Multiple
    Navi.Services.Custom.Multiple.Toml
    Navi.Services.Custom.Single
    Navi.Services.Custom.Single.Toml
    Navi.Services.Network.NetInterfaces
    Navi.Services.Network.NetInterfaces.Toml
    Navi.Services.Types
    Navi.Utils

  build-depends:
    , base                     >=4.17      && <4.19
    , bytestring               >=0.10.10.0 && <0.13
    , concurrent-effectful     ^>=0.1
    , containers               >=0.5.11.0  && <0.7
    , dbus                     >=1.2.14    && <1.4
    , deepseq                  >=1.4.6.0   && <1.6
    , effectful                >=2.2.1.0   && <2.4
    , exceptions-effectful     ^>=0.1
    , fdo-notify               ^>=0.3.1
    , fs-effectful             ^>=0.1
    , ioref-effectful          ^>=0.1
    , logger-effectful         ^>=0.1
    , logger-ns-effectful      ^>=0.1
    , optics-core              ^>=0.4
    , optics-th                ^>=0.4
    , optparse-applicative     >=0.16.1.0  && <0.19
    , optparse-effectful       ^>=0.1
    , pythia                   ^>=0.1
    , relative-time            ^>=0.1
    , si-bytes                 ^>=0.1
    , smart-math               ^>=0.1
    , stm-effectful            ^>=0.1
    , terminal-effectful       ^>=0.1
    , text                     >=1.2.3.2   && <2.2
    , time-effectful           ^>=0.1
    , toml-reader              >=0.1.0.0   && <0.3
    , typed-process-effectful  ^>=1.0.0.0

  hs-source-dirs:   src
  default-language: GHC2021

executable navi
  import:           common-exts
  main-is:          Main.hs
  build-depends:
    , base
    , effectful
    , fs-effectful
    , ioref-effectful
    , navi
    , optparse-effectful
    , si-bytes
    , terminal-effectful
    , text
    , time-effectful
    , typed-process-effectful

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

test-suite unit
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Unit.Navi.Config
    Unit.Navi.Config.Toml
    Unit.Navi.Services.Battery.Percentage.Toml
    Unit.Navi.Services.Battery.Status.Toml
    Unit.Navi.Services.Custom.Multiple.Toml
    Unit.Navi.Services.Custom.Single.Toml
    Unit.Navi.Services.Network.NetInterfaces.Toml
    Unit.Prelude

  build-depends:
    , base
    , fdo-notify
    , fs-effectful
    , ioref-effectful
    , navi
    , pythia
    , smart-math
    , tasty            >=1.1.0.3 && <1.6
    , tasty-hunit      >=0.9     && <0.11
    , text

  hs-source-dirs:   test/unit
  default-language: GHC2021

test-suite integration
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Integration.Exceptions
    Integration.MockApp
    Integration.Prelude

  build-depends:
    , base
    , concurrent-effectful
    , containers
    , effectful
    , fdo-notify
    , fs-effectful
    , ioref-effectful
    , logger-ns-effectful
    , navi
    , pythia
    , smart-math
    , tasty
    , tasty-hunit
    , terminal-effectful
    , text
    , time                  >=1.9.3 && <1.14
    , time-effectful

  hs-source-dirs:   test/integration
  default-language: GHC2021
