cabal-version:      2.4
name:               navi
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.4.7 || ==9.6.3 || ==9.8.1
copyright:          2021-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/navi/
bug-reports:        https://github.com/tbidne/navi/issues
synopsis:           A utility program for sending system notifications.
description:
  Please see the README at https://github.com/tbidne/navi/#readme

category:           System, Notifications
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/navi

common common-exts
  default-extensions:
    ApplicativeDo
    DataKinds
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    NoFieldSelectors
    NoImplicitPrelude
    NoStarIsType
    OverloadedLabels
    OverloadedStrings
    StrictData
    TypeFamilies

library
  import:           common-exts
  other-modules:    Paths_navi
  autogen-modules:  Paths_navi
  exposed-modules:
    Navi
    Navi.Args
    Navi.Config
    Navi.Config.Toml
    Navi.Config.Types
    Navi.Data.NaviLog
    Navi.Data.NaviNote
    Navi.Data.PollInterval
    Navi.Effects
    Navi.Effects.MonadNotify
    Navi.Effects.MonadSystemInfo
    Navi.Env.Core
    Navi.Env.DBus
    Navi.Env.NotifySend
    Navi.Event
    Navi.Event.Toml
    Navi.Event.Types
    Navi.NaviT
    Navi.Prelude
    Navi.Services.Battery.Common
    Navi.Services.Battery.Percentage
    Navi.Services.Battery.Percentage.Toml
    Navi.Services.Battery.Status
    Navi.Services.Battery.Status.Toml
    Navi.Services.Custom.Multiple
    Navi.Services.Custom.Multiple.Toml
    Navi.Services.Custom.Single
    Navi.Services.Custom.Single.Toml
    Navi.Services.Network.NetInterfaces
    Navi.Services.Network.NetInterfaces.Toml
    Navi.Services.Types
    Navi.Utils

  build-depends:
    , base                  >=4.17      && <4.20
    , bytestring            >=0.10.10.0 && <0.13
    , containers            >=0.5.11.0  && <0.8
    , dbus                  >=1.2.14    && <1.4
    , deepseq               >=1.4.6.0   && <1.6
    , effects-async         ^>=0.1
    , effects-exceptions    ^>=0.1
    , effects-fs            ^>=0.1
    , effects-ioref         ^>=0.1
    , effects-logger-ns     ^>=0.1
    , effects-optparse      ^>=0.1
    , effects-stm           ^>=0.1
    , effects-terminal      ^>=0.1
    , effects-thread        ^>=0.1
    , effects-time          ^>=0.1
    , fdo-notify            ^>=0.3.1
    , monad-logger          ^>=0.3.30
    , mtl                   >=2.2.2     && <2.4
    , optics-core           ^>=0.4
    , optics-th             ^>=0.4
    , optparse-applicative  >=0.16.1.0  && <0.19
    , process               ^>=1.6.9.0
    , pythia                ^>=0.1
    , relative-time         ^>=0.1
    , si-bytes              ^>=0.1
    , text                  >=1.2.3.2   && <2.2
    , toml-reader           >=0.1.0.0   && <0.3

  hs-source-dirs:   src
  default-language: GHC2021

executable navi
  import:           common-exts
  main-is:          Main.hs
  build-depends:
    , base
    , effects-fs
    , effects-time
    , navi
    , si-bytes
    , text

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

test-suite unit
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Unit.Navi.Config
    Unit.Navi.Config.Toml
    Unit.Navi.Services.Battery.Percentage.Toml
    Unit.Navi.Services.Battery.Status.Toml
    Unit.Navi.Services.Custom.Multiple.Toml
    Unit.Navi.Services.Custom.Single.Toml
    Unit.Navi.Services.Network.NetInterfaces.Toml
    Unit.Prelude

  build-depends:
    , base
    , effects-fs
    , fdo-notify
    , navi
    , pythia
    , tasty        >=1.1.0.3 && <1.6
    , tasty-hunit  >=0.9     && <0.11
    , text

  hs-source-dirs:   test/unit
  default-language: GHC2021

test-suite integration
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Integration.Exceptions
    Integration.MockApp
    Integration.Prelude

  build-depends:
    , base
    , effects-async
    , effects-exceptions
    , effects-fs
    , effects-logger-ns
    , effects-terminal
    , effects-thread
    , effects-time
    , fdo-notify
    , navi
    , pythia
    , tasty
    , tasty-hunit
    , text
    , time                >=1.9.3 && <1.14

  hs-source-dirs:   test/integration
  default-language: GHC2021
