cabal-version:      2.4
name:               navi
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.6.6 || ==9.8.4 || ==9.10.2 || ==9.12.2
copyright:          2021-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/navi/
bug-reports:        https://github.com/tbidne/navi/issues
synopsis:           A utility program for sending system notifications.
description:
  Please see the README at https://github.com/tbidne/navi/#readme

category:           System, Notifications
extra-source-files:
  examples/*.toml
  README.md
  test/integration/*.toml

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/navi

common common-exts
  default-extensions:
    ApplicativeDo
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoStarIsType
    OverloadedLabels
    OverloadedStrings
    StrictData
    TypeFamilies

  if os(osx)
    cpp-options: -DOSX

  default-language:   GHC2021

library
  import:          common-exts
  other-modules:   Paths_navi
  autogen-modules: Paths_navi
  exposed-modules:
    Navi
    Navi.Args
    Navi.Args.TH
    Navi.Config
    Navi.Config.Phase
    Navi.Config.Toml
    Navi.Config.Types
    Navi.Data.CommandResult
    Navi.Data.CommandResultParser
    Navi.Data.NaviLog
    Navi.Data.NaviNote
    Navi.Data.PollInterval
    Navi.Data.Result
    Navi.Effects
    Navi.Effects.MonadNotify
    Navi.Effects.MonadSystemInfo
    Navi.Env.AppleScript
    Navi.Env.Core
    Navi.Env.DBus
    Navi.Env.NotifySend
    Navi.Event
    Navi.Event.Toml
    Navi.Event.Types
    Navi.Event.Types.EventError
    Navi.NaviT
    Navi.Prelude
    Navi.Runner
    Navi.Services.Battery.Common
    Navi.Services.Battery.Percentage
    Navi.Services.Battery.Percentage.Toml
    Navi.Services.Battery.Status
    Navi.Services.Battery.Status.Toml
    Navi.Services.Custom
    Navi.Services.Custom.Toml
    Navi.Services.Network.NetInterfaces
    Navi.Services.Network.NetInterfaces.Toml
    Navi.Services.Types
    Navi.Utils

  build-depends:
    , base                   >=4.17      && <4.22
    , bytestring             >=0.10.10.0 && <0.13
    , containers             >=0.5.11.0  && <0.9
    , dbus                   >=1.2.14    && <1.5
    , deepseq                >=1.4.6.0   && <1.6
    , effects-async          ^>=0.1
    , effects-fs             ^>=0.1
    , effects-ioref          ^>=0.1
    , effects-logger         ^>=0.1
    , effects-optparse       ^>=0.1
    , effects-stm            ^>=0.1
    , effects-terminal       ^>=0.1
    , effects-thread         ^>=0.1
    , effects-time           ^>=0.1
    , effects-typed-process  ^>=0.1
    , exception-utils        ^>=0.1
    , exceptions             ^>=0.10.4
    , fdo-notify             ^>=0.3.1
    , gitrev-typed           ^>=0.1
    , mtl                    >=2.2.2     && <2.4
    , optics-core            ^>=0.4
    , optparse-applicative   >=0.16.1.0  && <0.20
    , os-string              ^>=2.0.1
    , pythia                 ^>=0.1
    , relative-time          ^>=0.1
    , si-bytes               ^>=0.1
    , template-haskell       >=2.17.0.0  && <2.24
    , text                   >=1.2.3.2   && <2.2
    , text-display           ^>=1.0.0.0
    , time                   >=1.9.3     && <1.16
    , toml-reader            >=0.1.0.0   && <0.4

  hs-source-dirs:  src

executable navi
  import:         common-exts
  main-is:        Main.hs
  build-depends:
    , base
    , navi

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite unit
  import:         common-exts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Navi.Config
    Unit.Navi.Config.Toml
    Unit.Navi.Services.Battery.Percentage.Toml
    Unit.Navi.Services.Battery.Status.Toml
    Unit.Navi.Services.Custom.Toml
    Unit.Navi.Services.Network.NetInterfaces.Toml
    Unit.Prelude
    Unit.Utils

  build-depends:
    , base
    , containers
    , effects-fs
    , fdo-notify
    , hedgehog        >=1.0.2   && <1.6
    , navi
    , pythia
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hedgehog  >=1.0.0.2 && <1.5
    , tasty-hunit     >=0.9     && <0.11
    , text

  hs-source-dirs: test/unit

test-suite integration
  import:         common-exts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Integration.Exceptions
    Integration.MockApp
    Integration.Prelude

  build-depends:
    , base
    , containers
    , effects-async
    , effects-fs
    , effects-logger
    , effects-terminal
    , effects-thread
    , effects-time
    , fdo-notify
    , navi
    , pythia
    , tasty
    , tasty-hunit
    , text
    , time

  hs-source-dirs: test/integration

test-suite e2e
  import:         common-exts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , effects-async
    , effects-fs
    , env-guard      ^>=0.2
    , mtl
    , navi
    , tasty
    , tasty-hunit

  hs-source-dirs: test/e2e
